<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.omsu.imit.androidcourse.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/button_map_text"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/button_street_text"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/button_notification_text"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_toast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/button_toast_text"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_sounds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/button_sounds_text"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_localization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/button_localization_text"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_dialogue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/button_dialogue_text"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_manual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/button_manual_text"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_text_editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/button_text_editor_text"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_animation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/button_animation_text"
                android:textAlignment="textStart"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
